--- a/_sass/_bubble-background.scss
+++ b/_sass/_bubble-background.scss
@@ -1,57 +1,151 @@
+@keyframes moveInCircle {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes moveVertical {
+  0% {
+    transform: translateY(-50%);
+  }
+  50% {
+    transform: translateY(50%);
+  }
+  100% {
+    transform: translateY(-50%);
+  }
+}
+
+@keyframes moveHorizontal {
+  0% {
+    transform: translateX(-50%) translateY(-10%);
+  }
+  50% {
+    transform: translateX(50%) translateY(10%);
+  }
+  100% {
+    transform: translateX(-50%) translateY(-10%);
+  }
+}
+
+
 .gradient-bg {
-  /* ... */
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+  background: linear-gradient(40deg, $color-bg1, $color-bg2);
+  top: 0;
+  left: 0;
+
+  svg {
+    display: none;
+  }
+
+
+  .gradients-container {
+    filter: url(#goo) blur(40px);
+    width: 100%;
+    height: 100%;
+  }
 
   .g1 {
-    background: radial-gradient(
-      circle at center,
-      rgba(220, 200, 230, 0.8) 0%,
-      rgba(220, 200, 230, 0) 50%
-    ) no-repeat;
-    /* ... */
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(220, 200, 230, 0.8) 0, rgba(220, 200, 230, 0) 50%) no-repeat;
+    mix-blend-mode: $blending;
+
+    width: $circle-size;
+    height: $circle-size;
+    top: 50% - $circle-size / 2;
+    left: 50% - $circle-size / 2;
+
+    transform-origin: center center;
+    animation: moveVertical 30s ease infinite;
+
+    opacity: 1;
   }
 
   .g2 {
-    background: radial-gradient(
-      circle at center,
-      rgba(230, 215, 240, 0.8) 0%,
-      rgba(230, 215, 240, 0) 50%
-    ) no-repeat;
-    /* ... */
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(230, 215, 240, 0.8) 0, rgba(230, 215, 240, 0) 50%) no-repeat;
+    mix-blend-mode: $blending;
+
+    width: $circle-size;
+    height: $circle-size;
+    top: 50% - $circle-size / 2;
+    left: 50% - $circle-size / 2;
+
+    transform-origin: calc(50% - 400px);
+    animation: moveInCircle 20s reverse infinite;
+
+    opacity: 1;
   }
 
   .g3 {
-    background: radial-gradient(
-      circle at center,
-      rgba(200, 150, 220, 0.8) 0%,
-      rgba(200, 150, 220, 0) 50%
-    ) no-repeat;
-    /* ... */
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(200, 150, 220, 0.8) 0, rgba(200, 150, 220, 0) 50%) no-repeat;
+    mix-blend-mode: $blending;
+
+    width: $circle-size;
+    height: $circle-size;
+    top: 50% - $circle-size / 2 + 200;
+    left: 50% - $circle-size / 2 - 500;
+
+    transform-origin: calc(50% + 400px);
+    animation: moveInCircle 40s linear infinite;
+
+    opacity: 1;
   }
 
   .g4 {
-    background: radial-gradient(
-      circle at center,
-      rgba(170, 140, 200, 0.8) 0%,
-      rgba(170, 140, 200, 0) 50%
-    ) no-repeat;
-    /* ... */
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(170, 140, 200, 0.8) 0, rgba(170, 140, 200, 0) 50%) no-repeat;
+    mix-blend-mode: $blending;
+
+    width: $circle-size;
+    height: $circle-size;
+    top: 50% - $circle-size / 2;
+    left: 50% - $circle-size / 2;
+
+    transform-origin: calc(50% - 200px);
+    animation: moveHorizontal 40s ease infinite;
+
+    opacity: 0.7;
   }
 
   .g5 {
-    background: radial-gradient(
-      circle at center,
-      rgba(190, 160, 230, 0.8) 0%,
-      rgba(190, 160, 230, 0) 50%
-    ) no-repeat;
-    /* ... */
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(190, 160, 230, 0.8) 0, rgba(190, 160, 230, 0) 50%) no-repeat;
+    mix-blend-mode: $blending;
+
+    width: $circle-size * 2;
+    height: $circle-size * 2;
+    top: 50% - $circle-size;
+    left: 50% - $circle-size;
+
+    transform-origin: calc(50% - 800px) calc(50% + 200px);
+    animation: moveInCircle 20s ease infinite;
+
+    opacity: 1;
   }
 
   .interactive {
-    background: radial-gradient(
-      circle at center,
-      rgba(210, 180, 240, 0.8) 0%,
-      rgba(210, 180, 240, 0) 50%
-    ) no-repeat;
-    /* ... */
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(210, 180, 240, 0.8) 0, rgba(210, 180, 240, 0) 50%) no-repeat;
+    mix-blend-mode: $blending;
+    transform: 0;
+    
+    width: 100%;
+    height: 100%;
+    top: -50%;
+    left: -50%;
+
+    opacity: 0.7;
   }
 }
+  
