--- a/_sass/_about-lab.scss
+++ b/_sass/_about-lab.scss
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
 
-    background-color: #14193d;
+    background-color: #b358c8;
 }
 
 .imagens-grid-wrapper {
