--- a/_sass/_institutions.scss
+++ b/_sass/_institutions.scss
@@ -2,7 +2,7 @@ $n:6;
 
 .institutions-wrapper {
     padding: 30px 12%;
-    background-color: #1f285f;
+    background-color: #b358c8;
 
     display: flex;
     align-items: center;
