--- a/_includes/testimony.html
+++ b/_includes/testimony.html
@@ -1,6 +1,6 @@
 <ul class="testimony-wrapper">
     <div class="testimony-title-wrapper">
-        <p class="testimony-title">Últimos paticipantes do <b>BRISA</b></p>
+        <p class="testimony-title">Conheça os <b>Professores</b></p>
     </div>
     <div class="testimony-cards-content">
         {% for item in site.data.testimony.items %}
