--- a/_sass/_last-editions.scss
+++ b/_sass/_last-editions.scss
@@ -16,7 +16,7 @@
     }
 
     .editions-text-wrapper {
-        background-color: rgb(23, 206, 230);
+        background-color: rgb(92, 52, 139);
         width: 30%;
         padding: 0px 30px 0px 60px;
 
@@ -28,14 +28,14 @@
             font-size: 40px;
             font-weight: 600;
             color: white;
-            text-align: right;
-            margin-bottom: 60px;
+            text-align: center;
+            margin-bottom: 30px;
         }
 
         .editions-text {
             font-size: 14px;
             color: white;
-            text-align: right;
+            text-align: left;
         }
     }
 }
