--- a/_includes/institutions.html
+++ b/_includes/institutions.html
@@ -7,7 +7,19 @@
             <img class="image-institutions-effect" height="30" src="{{ site.baseurl }}/_images/unb.png">
         </div>
         <div class="image-wrapper">
-            <img class="image-institutions-effect" height="30" src="{{ site.baseurl }}/_images/lappis.png">
+            <img class="image-institutions-effect" height="60" src="{{ site.baseurl }}/_images/lappis.png">
+        </div>
+        <div class="image-wrapper">
+            <img class="image-institutions-effect" height="30" src="{{ site.baseurl }}/_images/unb.png">
+        </div>
+        <div class="image-wrapper">
+            <img class="image-institutions-effect" height="60" src="{{ site.baseurl }}/_images/lappis.png">
+        </div>
+        <div class="image-wrapper">
+            <img class="image-institutions-effect" height="30" src="{{ site.baseurl }}/_images/unb.png">
+        </div>
+        <div class="image-wrapper">
+            <img class="image-institutions-effect" height="60" src="{{ site.baseurl }}/_images/lappis.png">
         </div>
 
     </div>
