--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -1,8 +1,8 @@
 <div id="partners-contribution" class="partners-content">
     <div class="partners-wrapper">
         <div class="partners-timeline">
-            <div class="timeline-content-wrapper">
-                <div class="icons-wrapper">
+            <div class="timeline-content-wrapper content-shine">
+                <div class="icons-wrapper shine">
                     <i class="fas fa-lightbulb" style="color:#262626; font-size:25px;"></i>
                 </div>
                 <p>Idealize um projeto</p>
@@ -15,15 +15,15 @@
                 <p>Monte sua equipe</p>
             </div>
             <div class="line"></div>
-            <div class="timeline-content-wrapper">
-                <div class="icons-wrapper">
+            <div class="timeline-content-wrapper content-shine">
+                <div class="icons-wrapper shine">
                     <i class="fas fa-laptop-code" style="color:#262626; font-size:25px;"></i>
                 </div>
                 <p>Desenvolvimento do seu projeto</p>
             </div>
             <div class="line"></div>
-            <div class="timeline-content-wrapper">
-                <div class="icons-wrapper">
+            <div class="timeline-content-wrapper content-shine">
+                <div class="icons-wrapper shine">
                     <i class="fas fa-cube" style="color:#262626; font-size:25px;"></i>
                 </div>
                 <p>Sua ideia se torna realidade</p>
